-- Release 1.0.0 --

2004-12-28  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw.c: When drawing circles I ignored if circle
	  had inner diameter, which was pointed out by Harry Eaton. 
	  Not anymore... Closes bug #1050340 in this branch.

2004-10-30  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw_amacro.c: Forgot to use local_gc when drawing some
	  of the primitive aperture macros. Closes bug #1051045.

2004-09-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: If you tried to invert color of an unloaded layer
	  you got a segmentation fault. I think it was discovered by Juergen.

2004-08-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/Makefile.am: Use libpng-config to find out
	  parameters to use in CFLAGS and LIBS.

2004-08-21  Stefan Petersen  <spe@stacken.kth.se>

        * src/gerbv.c: Made sure that only list of short options is 
          printed when only short options are compiled in.

2004-08-16  Stefan Petersen  <spe@stacken.kth.se>

	* doc/*, example/*: Makefiles.am removed Makefile.in wheh running
	  distclean. Not good. Spotted by Hamish Moffatt when packaging
	  for Debian.

2004-07-28  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: In gerbers the image can be negative or positive.
          Then a part of the image called a layer can be clear or dark.
          -"No more weed for you, Mr Gerber".
          Richard Lightman found this and submitted both an example and 
          a patch. Thanks!

2004-07-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: When drawing thermals the cross ends in butt
	  instead of round which gives nicer look when thermal covers an 
	  other via.

2004-06-27  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Improved comments on what is going and why. Also
	  improved a little in determining the size of the image. Now it 
	  ignores points with no aperture defined, unless it is a polygon 
	  area.

2004-06-24  Stefan Petersen  <spe@stacken.kth.se>